add basic creation and destruction of game blocks

--- a/Notes/TODO
+++ b/Notes/TODO
@@ -2,7 +2,7 @@
 TODO:
 
     X procedural generation of flat map (for testing)
-    - placement and removal of blocks
+    X placement and removal of blocks
     - walking mode for player
     - flying mode for player
     - subclassing for blocks of different types
