--- a/Notes/TODO
+++ b/Notes/TODO
@@ -8,8 +8,10 @@ TODO NEXT:
 	X mark blocks that have had mutations so that only those have calculations
 		done per evaluation tick
 	X fix block placement against blocks that are translating or rotating
-	- do block evaluation processes on an async coroutine, and the mutation
+	X do block evaluation processes on an async coroutine, and the mutation
 		commits sychronously
+	- keep a secondary list of blocks that need evaluation/mutation commits done
+		(maybe)
 	- more caching of block gameobject components
 	- start menu (new game, load save, exit)
 	- in-game options (save, load, exit)
@@ -76,8 +78,10 @@ CLEANUP/FIXES:
 OPTIMIZATIONS:
 	X mark blocks that have had mutations so that only those have calculations
 		done per evaluation tick
-	- do block evaluation processes on a coroutine, and the mutation commits
+	X do block evaluation processes on a coroutine, and the mutation commits
 		sychronously
+	- keep a secondary list of blocks that need evaluation/mutation commits done
+		(maybe)
 	- more caching of block gameobject components
 
 
