create Block class to house gameobject and script for blocks, update BlockManager methods to accept Block as arg

--- a/Notes/TODO
+++ b/Notes/TODO
@@ -10,6 +10,8 @@ TODO NEXT:
 	X fix block placement against blocks that are translating or rotating
 	X do block evaluation processes on an async coroutine, and the mutation
 		commits sychronously
+	- create encapsulation class (Block.cs) for block gameobjects and scripts	
+	- update block evaluation from coroutine to multithread	
 	- keep a secondary list of blocks that need evaluation/mutation commits done
 		(maybe)
 	- more caching of block gameobject components
@@ -58,6 +60,7 @@ SYSTEMS TODO:
 
 REFACTORS TODO:
 
+	- create encapsulation class for block gameobjects and scripts
 	- (maybe) move ghost block instance inside player instance instead of global
 		block manager or its own manager
 	- (maybe) move EnvironmentGeneration.CreateBlock() method to BlockManager
@@ -80,6 +83,7 @@ OPTIMIZATIONS:
 		done per evaluation tick
 	X do block evaluation processes on a coroutine, and the mutation commits
 		sychronously
+	- update block evaluation from coroutine to multithread
 	- keep a secondary list of blocks that need evaluation/mutation commits done
 		(maybe)
 	- more caching of block gameobject components
