--- a/Notes/TODO
+++ b/Notes/TODO
@@ -14,8 +14,10 @@ TODO NEXT:
 	X fix blocks flush against each other visual bug
 	X fix camera pan jittering while moving
 	X fix slowdown of player when not moving
-	- fix block removal async thread bug
+	- fix mouse hide/show
 	- fix jumping
+	- dial-in player speed/movement
+	- fix block removal async thread bug
 	- fix player move controls to be separated from block orientation control
 	- fix ghost block orientation control to be more intuitive
 	- fix player-not-found bug in PlayerManager
@@ -86,8 +88,10 @@ CLEANUP/FIXES:
 	X fix blocks flush against each other visual bug
 	X fix camera pan jittering while moving
 	X fix slowdown of player when not moving
-	- fix block removal async thread bug
+	- fix mouse hide/show
 	- fix jumping
+	- dial-in player speed/movement
+	- fix block removal async thread bug
 	- fix player move controls to be separated from block orientation control
 	- fix ghost block orientation control to be more intuitive
 	- fix player-not-found bug in PlayerManager
